# qt_study

./: .gitignore  CMakeLists.txt
classes/: CMakeLists.txt  Mammal.cpp  Mammal.h  README.md  animal.cpp  animal.h  constructor_deconstructor.cpp  laptop.cpp  laptop.h  main.cpp  run.sh
flow_control/: CMakeLists.txt  age_calculator.cpp  if_statement.cpp  loops.cpp  main.cpp  switch_state.cpp  ternary.cpp
functions/: CMakeLists.txt  byref_byvalue.cpp  function_flow.cpp  function_params.cpp  functions_in_structs.cpp  main.cpp  overloading.cpp  paintcalc.cpp  returning_value.cpp
input_output/: CMakeLists.txt  inputs.cpp  main.cpp  outputs.cpp
variables_constants/: CMakeLists.txt  arithmetic.cpp  array.cpp  assignment_operators.cpp  logical_op.cpp  main.cpp
